--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
-    "prettier": "^3.5.0",
+    "prettier": "^3.5.1",
     "prettier-plugin-svelte": "^3.3.3",
     "turbo": "^2.4.2"
   },
-  "packageManager": "pnpm@8.15.6",
+  "packageManager": "pnpm@10.4.1",
   "engines": {
     "node": ">=18"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
