--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
-  "name": "with-svelte",
-  "private": true,
-  "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev",
-    "lint": "turbo run lint",
-    "format": "prettier --write .",
-    "check-types": "turbo run check-types"
-  },
-  "devDependencies": {
-    "prettier": "^3.5.1",
-    "prettier-plugin-svelte": "^3.3.3",
-    "turbo": "^2.4.2"
-  },
-  "packageManager": "pnpm@10.4.1",
-  "engines": {
-    "node": ">=18"
-  },
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "esbuild"
+    "name": "with-svelte",
+    "private": true,
+    "scripts": {
+        "build": "turbo run build",
+        "dev": "turbo run dev",
+        "lint": "turbo run lint",
+        "format": "prettier --write .",
+        "check-types": "turbo run check-types"
+    },
+    "devDependencies": {
+        "prettier": "^3.5.1",
+        "prettier-plugin-svelte": "^3.3.3",
+        "turbo": "^2.4.2"
+    },
+    "engines": {
+        "node": ">=18"
+    },
+    "packageManager": "npm@11.1.0",
+    "workspaces": [
+        "apps/*",
+        "packages/*"
     ]
-  }
 }
