--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "@repo/ui",
-  "version": "0.0.0",
-  "type": "module",
-  "module": "index.ts",
-  "main": "index.ts",
-  "exports": {
-    ".": {
-      "types": "./index.ts",
-      "svelte": "./index.ts"
+    "name": "@repo/ui",
+    "version": "0.0.0",
+    "type": "module",
+    "module": "index.ts",
+    "main": "index.ts",
+    "exports": {
+        ".": {
+            "types": "./index.ts",
+            "svelte": "./index.ts"
+        }
+    },
+    "scripts": {
+        "lint": "eslint ."
+    },
+    "devDependencies": {
+        "@repo/eslint-config": "*",
+        "eslint": "^9.20.1",
+        "svelte": "^5.20.1"
     }
-  },
-  "scripts": {
-    "lint": "eslint ."
-  },
-  "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "eslint": "^9.20.1",
-    "svelte": "^5.20.1"
-  }
 }
