--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -16,11 +16,11 @@
 		"test:unit": "vitest"
 	},
 	"dependencies": {
-		"@repo/ui": "*"
+		"@repo/ui": "workspace:*"
 	},
 	"devDependencies": {
-		"@repo/eslint-config": "*",
-		"@repo/typescript-config": "*",
+		"@repo/eslint-config": "workspace:*",
+		"@repo/typescript-config": "workspace:*",
 		"@sveltejs/adapter-netlify": "^4.4.1",
 		"@sveltejs/kit": "^2.17.2",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
