--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "dev": "turbo run dev",
         "lint": "turbo run lint",
         "format": "prettier --write .",
+        "check": "turbo run check",
         "check-types": "turbo run check-types"
     },
     "devDependencies": {
@@ -13,12 +14,13 @@
         "prettier-plugin-svelte": "^3.3.3",
         "turbo": "^2.4.2"
     },
+    "packageManager": "pnpm@10.4.1",
     "engines": {
         "node": ">=18"
     },
-    "packageManager": "npm@11.1.0",
-    "workspaces": [
-        "apps/*",
-        "packages/*"
-    ]
+    "pnpm": {
+        "onlyBuiltDependencies": [
+            "esbuild"
+        ]
+    }
 }
