--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,7 +14,7 @@
         "lint": "eslint ."
     },
     "devDependencies": {
-        "@repo/eslint-config": "*",
+        "@repo/eslint-config": "workspace:*",
         "eslint": "^9.20.1",
         "svelte": "^5.20.1"
     }
