--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
     "name": "with-svelte",
     "private": true,
+    "workspaces": [
+        "apps/*",
+        "packages/*"
+    ],
     "scripts": {
         "build": "turbo run build",
         "dev": "turbo run dev",
@@ -14,13 +18,8 @@
         "prettier-plugin-svelte": "^3.3.3",
         "turbo": "^2.4.2"
     },
-    "packageManager": "pnpm@10.4.1",
+    "packageManager": "npm@10.5.0",
     "engines": {
         "node": ">=18"
-    },
-    "pnpm": {
-        "onlyBuiltDependencies": [
-            "esbuild"
-        ]
     }
 }
